добавлен и слегка переделан тултип с заглушкой вместо данных

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2327,31 +2327,34 @@ div.messages li {
     text-align: center;
 }
 
-#result-table-step2 .tooltip{
+#result-table-step2 .conditions{
+    display: block;
+    margin: 60px 0 0 85px;
     position: relative;
-    top: 45px;
-    right: 5px;
+}
+
+
+#result-table-step2 .conditions .tooltip{
+    display: none;
+    position: absolute;
+    bottom: 10px;
+    left: -5px;
 }
 
 #result-table-step2 .tooltip span{
-    display: none;
+    display: block;
     padding: 10px;
+    width: 344px;
+    min-height: 30px;
     background: #fff;
-    min-width: 200px;
     border: 2px solid #ac826f;
-    position: absolute;
-    top: -55px;
-    right: -120px;
     font-size: 11px;
     color: #8a4e33;
-    z-index: 20;
 }
 
-#result-table-step2 .tooltip span img{
-    position: absolute;
-    top: 34px;
-    left: 50px;
-    z-index: 25;
+#result-table-step2 .tooltip img{
+   display: block;
+   margin: -2px 0 0 20px;
 }
 
 .order-button{
