--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2144,6 +2144,22 @@ div.messages li {
 }
 
 /*Tabs for Calculator Pages*/
+#overlay{
+    display: none;
+    position: absolute;
+    background: #5b5757;
+    opacity: 0.5;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+}
+
+#overlay img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
 #calc-tabs {
     width: 990px;
     margin: 50px auto 0 auto;
