--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+<div id="overlay"><img src="/static/images/preloader.gif" alt="" /></div>
 
 <div id="calc-tabs">
     <ul>
@@ -27,7 +28,7 @@
     </ul>
 
     <div id="tabs-1">
-    <form action="" method="post">
+    <form action="" method="post" id="form-step1">
     {% csrf_token %}
 
     {% if s1_form.non_field_errors %}
