--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -69,7 +69,8 @@
 {% endblock %}
 
 {% block content %}
-
+<div id="overlay"><img src="/static/images/preloader.gif" alt="" /></div>
+    
     <div id="calc-tabs">
         <ul>
             <li><a href="#tabs-1">КАСКО</a></li>
