--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -169,6 +169,12 @@
                     </div>
 
                     <div id="result-table-step2">
+                        <div id="autodata-step1">
+                            Вы страхуете:
+                            <span>BMW 1-series</span>
+                            2011 года, 813000 руб
+                        </div>
+                    
                         <table border="1">
                             {% for comp in result.info %}
                                 <tr>
