--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2365,10 +2365,26 @@ div.messages li {
     text-align: center;
 }
 
+#result-table-step2 .company-data{
+    position: relative;
+    width: 152px;
+    height: 113px;
+}
+
+#result-table-step2 .company-data img{
+    display: block;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+
 #result-table-step2 .conditions{
     display: block;
-    margin: 60px 0 0 85px;
-    position: relative;
+    right: 10px;
+    bottom: 0;
+    position: absolute;
+    color: #501c07;
+    font-weight: bolder;
 }
 
 
@@ -2388,11 +2404,14 @@ div.messages li {
     border: 2px solid #ac826f;
     font-size: 11px;
     color: #8a4e33;
+    text-align: left;
+    font-weight: normal;
 }
 
 #result-table-step2 .tooltip img{
    display: block;
    margin: -2px 0 0 20px;
+   padding: 0;
 }
 
 .order-button{
