--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -89,6 +89,8 @@
                 <td class="second">
                     {{ s1_form.price }}
                     <div id="price-slider-container">
+                        <span id="min"></span>
+                        <span id="max"></span>
                         <div id="price-slider"></div>
                     </div>
                     <span id="stoim"></span>
