--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2722,6 +2722,66 @@ div.messages li {
     width: 100px;
 }
 
+/*Select style for auto mark*/
+#long-1.long-select{
+    width: 914px;
+    height: 36px;
+    background: url(/static/images/long_select.png) top left no-repeat;
+    position: relative;
+    z-index: 2;
+
+}
+
+#long-1.long-select input{
+    position: absolute;
+    top: 4px;
+    left: 6px;
+    color: #6a6a6a;
+    font-size: 16px;
+    height: 24px;
+    width: 880px;
+    border: none;
+}
+
+#long-1.long-select .jScrollPaneContainer {
+	position: relative;
+	overflow: hidden;
+    top: 31px;
+	z-index: 1;
+    visibility: hidden;
+    background: #f8f5f5;
+    padding: 10px 0;
+    border: 1px solid #f0e8e5;
+}
+
+#long-1.long-select ul{
+    position: absolute;
+    top: 34px;
+    left: 3px;
+    background: #f8f5f5;
+    border: none;
+    width: 911px;
+    z-index: 10;
+    height: 400px;
+    overflow-y: auto;
+    display: none;
+    padding: 20px 0;
+    font-size: 14px;
+}
+
+#long-1.long-select ul li{
+    list-style: none;
+    padding: 5px 0 5px 20px;
+    float: left;
+    border:  none;
+    width: 156px;
+    cursor: pointer;
+}
+
+#long-1 a{
+    color: #4e1b06;
+}
+
 /*Transform selects in second calc page*/
 #economy-block .long-select{
     background: url("/static/images/long_select_2.png") no-repeat scroll left top transparent;
@@ -2943,6 +3003,7 @@ div.messages li {
 	height: 10px;
     background: url(/static/images/scroll_arrow_up.png) top left no-repeat;
 }
+
 
 
 /*jScrollPane short-select settings*/
