--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -134,7 +134,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" value=""/>
                         {{ s1_form.age }}
                     </div>
                     {{ s1_form.age.errors }}
@@ -145,7 +145,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" value=""/>
                         {{ s1_form.experience_driving }}
                     </div>
                     {{ s1_form.experience_driving.errors }}
