Исправление косяка с русскими именами файлов.

--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -180,7 +180,7 @@
                             <tr>
                                 <td>
                                    <div class="company-data">
-                                       <img src="/static/images/company_logo/{{ comp.full_name|add:".png" }}" alt="{{ comp.full_name }}" />
+                                       <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}" alt="{{ comp.full_name }}" />
                                         <a class="conditions" href="#">
                                             Условия
                                             <div class="tooltip">
