--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -134,7 +134,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <input type="text" value=""/>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.age }}
                     </div>
                     {{ s1_form.age.errors }}
@@ -145,7 +145,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <input type="text" value=""/>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.experience_driving }}
                     </div>
                     {{ s1_form.experience_driving.errors }}
@@ -159,7 +159,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.age1 }}
                     </div>
                     {{ s1_form.age1.errors }}
@@ -170,7 +170,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.experience_driving1 }}
                     </div>
 
@@ -185,7 +185,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.age2 }}
                     </div>
 
@@ -198,7 +198,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.experience_driving2 }}
                     </div>
 
@@ -213,7 +213,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.age3 }}
                     </div>
                     {{ s1_form.age3.errors }}
@@ -224,7 +224,7 @@
                 </td>
                 <td>
                     <div class="short-select">
-                        <span class="select-text"></span>
+                        <input type="text" maxlength="2" value=""/>
                         {{ s1_form.experience_driving3 }}
                     </div>
                     {{ s1_form.experience_driving3.errors }}
