блок скрыт, если значение первого селекта не выбрано

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -242,7 +242,7 @@
 
     <br/>
 
-    <!--a href="{% url cleansession %}">очистить сессию (для тестов)</a-->
+    <a href="{% url cleansession %}">очистить сессию (для тестов)</a>
     </div>
 
     <div id="tabs-2">осаго</div>
