Показ реальных данных по автомобилю на 2-м шаге.

--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -171,8 +171,8 @@
                 <div id="result-table-step2">
                     <div id="autodata-step1">
                         Вы страхуете:
-                        <span>BMW 1-series</span>
-                        2011 года, 813000 руб
+                        <span>{{ data.mark }} {{ data.model }}</span>
+                        {{ data.model_year }} года, {{ data.price }} руб.
                     </div>
 
                     <table border="1">
