--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -241,7 +241,7 @@
 
     <br/>
 
-    <a href="{% url cleansession %}">очистить сессию (для тестов)</a>
+    <a href="{% url cleansession %}">очистить введенные данные</a>
     </div>
 
     <div id="tabs-2">осаго</div>
