--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -26,7 +26,6 @@
                             $("#id_burglar_alarm_model").parent().hide();
                         }
                         else {
-
                             $.ajax(
                                     {
                                         url:"{% url get_ba_models %}",
@@ -53,14 +52,15 @@
                     franchiseSlider($("#franchize"));
 
                     //click on sort checkbox
-                    $("#sort-table input").click(function() {
+                    $("#second-submit").click(function(e) {
+                        e.preventDefault();
                         $("#sorting").submit();
                     })
 
                     //tooltip in table
-                    $(".conditions").hover(function(){
+                    $(".conditions").hover(function() {
                         $(this).find(".tooltip").fadeIn();
-                    }, function(){
+                    }, function() {
                         $(this).find(".tooltip").fadeOut();
                     })
                 }
@@ -69,8 +69,8 @@
 {% endblock %}
 
 {% block content %}
-<div id="overlay"><img src="/static/images/preloader.gif" alt="" /></div>
-    
+    <div id="overlay"><img src="/static/images/preloader.gif" alt=""/></div>
+
     <div id="calc-tabs">
         <ul>
             <li><a href="#tabs-1">КАСКО</a></li>
@@ -132,116 +132,119 @@
                                     <td></td>
                                 </tr>
                             </table>
+
+                            <a id="second-submit" href="#"><img src="/static/images/recount_button.png" alt="пересчитать" /></a>
                     </div>
-                </div>
+                    </div>
 
-                <div class="form-round-block" id="economy-block">
-                    <h2>Экономия</h2>
+                    <div class="form-round-block" id="economy-block">
+                        <h2>Экономия</h2>
 
-                    <p>Стандартная франшиза</p>
+                        <p>Стандартная франшиза</p>
 
 
-                    <div id="franchize-container">
-                        <span id="min"></span>
-                        <span id="max"></span>
+                        <div id="franchize-container">
+                            <span id="min"></span>
+                            <span id="max"></span>
 
-                        <div id="franchize">
-                            {{ s1_form.franchise }}
+                            <div id="franchize">
+                                {{ s1_form.franchise }}
+                            </div>
                         </div>
+
+
+                        <p>Охранная система автомобиля</p>
+
+                        <div class="long-select">
+                            <span class="select-text"></span>
+                            {{ s1_form.burglar_alarm_group }}
+                        </div>
+
+                        <div class="long-select">
+                            <span class="select-text"></span>
+                            {{ s1_form.burglar_alarm_model }}
+                        </div>
+
+
+                        <p><input type="submit" value="Обновить"/></p>
+                        </form>
                     </div>
 
+                    <div id="result-table-step2">
+                        <div id="autodata-step1">
+                            Вы страхуете:
+                            <span>{{ data.mark }} {{ data.model }}</span>
+                            {{ data.model_year }} года, {{ data.price }} руб.
+                        </div>
 
-                    <p>Охранная система автомобиля</p>
+                        <table border="1">
+                            {% for comp in result.info %}
+                                <tr>
+                                    <td>
+                                        <div class="company-data">
+                                            <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}"
+                                                 alt="{{ comp.full_name }}"/>
+                                            <a class="conditions" href="#">
+                                                Условия
+                                                <div class="tooltip">
+                                                    <span>- форма рекламы в сети Интернет, направленная на увеличение</span>
+                                                    <img src="/static/images/tooltip_angle.png" alt=""/>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.Evacuator %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.TheEmergencyCommissioner %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
 
-                    <div class="long-select">
-                        <span class="select-text"></span>
-                        {{ s1_form.burglar_alarm_group }}
+                                    <td class="small">
+                                        {% if comp.parameters.PaymentWithoutInquiries %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.GatheringOfInquiries %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.TheModularInsuranceSum %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.NewForTheOld %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.TheObligatoryFranchize %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+                                    <td class="small">
+                                        {% if comp.parameters.AlternativenessOfFormsOfPayment %}
+                                            <img src="/static/images/yes_circle.png" alt="да"/>
+                                        {% endif %}
+                                    </td>
+
+                                    <td class="final-price">
+                                        <div class="ourscore">{{ comp.ourscore }}</div>
+                                        <div class="score">{{ comp.score }}</div>
+                                        <a class="order-button"
+                                           href="{% url ncalc_step3 comp.alias %}"></a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </table>
                     </div>
-
-                    <div class="long-select">
-                        <span class="select-text"></span>
-                        {{ s1_form.burglar_alarm_model }}
-                    </div>
-
-
-                    <p><input type="submit" value="Обновить"/></p>
-                    </form>
-                </div>
-
-                <div id="result-table-step2">
-                    <div id="autodata-step1">
-                        Вы страхуете:
-                        <span>{{ data.mark }} {{ data.model }}</span>
-                        {{ data.model_year }} года, {{ data.price }} руб.
-                    </div>
-
-                    <table border="1">
-                        {% for comp in result.info %}
-                            <tr>
-                                <td>
-                                   <div class="company-data">
-                                       <img src="/static/images/company_logo/{{ comp.alias|add:".png" }}" alt="{{ comp.full_name }}" />
-                                        <a class="conditions" href="#">
-                                            Условия
-                                            <div class="tooltip">
-                                                <span>- форма рекламы в сети Интернет, направленная на увеличение</span>
-                                                <img src="/static/images/tooltip_angle.png" alt="" />
-                                            </div>
-                                        </a>
-                                   </div>
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.Evacuator %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.TheEmergencyCommissioner %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-
-                                <td class="small">
-                                    {% if comp.parameters.PaymentWithoutInquiries %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.GatheringOfInquiries %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.TheModularInsuranceSum %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.NewForTheOld %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.TheObligatoryFranchize %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-                                <td class="small">
-                                    {% if comp.parameters.AlternativenessOfFormsOfPayment %}
-                                        <img src="/static/images/yes_circle.png" alt="да"/>
-                                    {% endif %}
-                                </td>
-
-                                <td class="final-price">
-                                    <div class="ourscore">{{ comp.ourscore }}</div>
-                                    <div class="score">{{ comp.score }}</div>
-                                    <a class="order-button"
-                                       href="{% url ncalc_step3 comp.alias %}"></a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                </div>
 
 
                 {% endif %}
