убрано дефолтное поведение у ссылки "условия" в таблице выдачи на втором шаге

--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -63,6 +63,11 @@
                     }, function() {
                         $(this).find(".tooltip").fadeOut();
                     })
+
+                    //Prevent Default on table conditions href
+                    $(".conditions").click(function(e){
+                        e.preventDefault();
+                    })
                 }
         );
     </script>
