небольшой хак для правильной отрисовки таблицы в ие7

--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -9,6 +9,7 @@
         $(function() {
 
                     $("#sort-parameters td:even").addClass("even");
+                    $("td:empty").html("&nbsp;");
 
                     if ($("#id_burglar_alarm_group").val() == "" || $("#id_burglar_alarm_group").val() == "2")  //hardcoded no burglar alarm id.
                     {
